--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,4 +1,4 @@
-#container {
+/*#container {
   text-align: center;
 
   position: absolute;
@@ -24,7 +24,7 @@
 
 #container a {
   text-decoration: none;
-}
+}*/
 
 img {
   padding-bottom: 0;
